added api Authentication API

--- a/MiniTwitAPI/appsettings.json
+++ b/MiniTwitAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Authentication": {
+    "Authorization": "simulator:super_safe!"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
