add deploy step to CD
Co-authored-by: Nicklas Jeppesen <nicklasxxx@users.noreply.github.com>
Co-authored-by: David Falces <DavidFalces@users.noreply.github.com>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -45,17 +45,22 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-# on:
-#   push:
-#     branches [ "main" ]
-#
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#
-#     steps:
-#     - uses: actions/checkout@v3
-#     - name: Build the application, test it, and create a Docker image
-#       run: docker build -t minitwit .
-#
-#
+
+  # Deploy action from 
+  # <https://www.programonaut.com/how-to-deploy-a-docker-image-to-a-server-using-github-actions/>
+  # (Accessed on the 28th of February, 2024)
+  deploy:
+    needs: publish
+    name: deploy image
+    runs-on: ubuntu-latest
+    environment: deploy-environment
+    steps:
+    - name: install ssh keys
+      run: |
+        install -m 600 -D /dev/null ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+    - name: connect and pull
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && sudo docker compose pull && sudo docker compose up -d && exit"
+    - name: cleanup
+      run: rm -rf ~/.ssh
