--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -50,7 +50,7 @@ jobs:
   # <https://www.programonaut.com/how-to-deploy-a-docker-image-to-a-server-using-github-actions/>
   # (Accessed on the 28th of February, 2024)
   deploy:
-    needs: publish
+    needs: build-and-push-image
     name: deploy image
     runs-on: ubuntu-latest
     environment: deploy-environment
