--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -51,6 +51,7 @@ jobs:
   # <https://github.com/marketplace/actions/create-a-release-in-a-github-action>
   # (accessed on the 28th of February, 2024)
   create-release:
+    needs: build-and-push-image
     name: Create Release
     runs-on: ubuntu-latest
     steps:
