--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -54,6 +54,8 @@ jobs:
     needs: build-and-push-image
     name: Create Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
