--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -65,8 +65,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         with:
-          tag_name: v.${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: v.${{ github.ref_name }}.${{ github.sha }}
+          release_name: Release ${{ github.ref_name }} ${{ github.sha }}
           draft: false
           prerelease: false
 
