--- a/MiniTwit/appsettings.Development.json
+++ b/MiniTwit/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "MiniTwitContext": "Data Source=MiniTwit.Data.db"
+    "MiniTwitContext": "Data Source=MiniTwit.Data.db",
+    "MinitwitSqlserver": "Server=localhost,1433;Database=YourDatabaseName;User Id=sa;Password=<YourStrong@Passw0rd>;TrustServerCertificate=true;"
   }
 }
