Project runs migrations automatically if no tables in db are present

--- a/MiniTwit/appsettings.Development.json
+++ b/MiniTwit/appsettings.Development.json
@@ -8,6 +8,7 @@
   },
   "ConnectionStrings": {
     "MiniTwitContext": "Data Source=MiniTwit.Data.db",
-    "MinitwitSqlserver": "Server=localhost,1433;Database=YourDatabaseName;User Id=sa;Password=<YourStrong@Passw0rd>;TrustServerCertificate=true;"
+    "MinitwitSqlserver": "Server=localhost,1433;Database=YourDatabaseName;User Id=user;Password=password;TrustServerCertificate=true;",
+    "MinitwitSqlserver1": "Server=localhost,1433;Database=YourDatabaseName;User Id=sa;Password=<YourStrong@Passw0rd>;TrustServerCertificate=true;"
   }
 }
