Revert "Merge pull request #28 from DevOps-GroupF/newTagsOnDocker"
This reverts commit 3b0007b0bff21de0e8dbb75215ae459c34cf3754, reversing
changes made to 2f4e19a5d70d3c406811f76b5a37e528eaede2eb.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -43,9 +43,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ${{ env.REGISTRY }}/$(echo ${{ env.IMAGE_NAME }} | tr '[:upper:]' '[:lower:]'):latest
-            ${{ env.REGISTRY }}/$(echo ${{ env.IMAGE_NAME }} | tr '[:upper:]' '[:lower:]'):${{ github.sha }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
 
