attempt to setup mssql dev environment

--- a/MiniTwit/appsettings.json
+++ b/MiniTwit/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "SecretsDir": "/run/secrets",
+  "DbConnectionStringSecretName": "db_secret",
   "AllowedHosts": "*"
 }
