--- a/MiniTwit/appsettings.Development.json
+++ b/MiniTwit/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "MiniTwitContext": "Data Source=MiniTwit.Data.db"
+    "MiniTwitContext": "Data Source=MiniTwit.Data.db",
+    "MinitwitSqlserver": "Server=minitwit-database,1433;Database=minitwit-db;User Id=sa;Password=Pass@word;TrustServerCertificate=true;"
   }
 }
