--- a/compose.yml
+++ b/compose.yml
@@ -20,6 +20,8 @@ services:
     container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
     networks:
       - itu-minitwit-network
 
