move to environment variable

--- a/MiniTwit/appsettings.json
+++ b/MiniTwit/appsettings.json
@@ -5,7 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SecretsDir": "/run/secrets",
-  "DbConnectionStringSecretName": "db_secret",
+  "DbConnectionStringEnvVar": "DB_CONN_STRING",
   "AllowedHosts": "*"
 }
