--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,8 @@ services:
       - ACCEPT_EULA=Y
     ports:
       - 1433:1433
+    networks:
+      - itu-minitwit-network
 
   minitwit-service:
     container_name: minitwit-container
