--- a/MiniTwit/appsettings.json
+++ b/MiniTwit/appsettings.json
@@ -6,5 +6,17 @@
     }
   },
   "DbConnectionStringEnvVar": "DB_CONN_STRING",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    }
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
+  },
   "AllowedHosts": "*"
 }
