--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,7 +24,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
   lint-dotnet:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps: 
     - name: Checkout
       uses: actions/checkout@master
