try adding a check run write permission in accordance with https://docs.github.com/rest/checks/runs#create-a-check-run

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,6 +13,8 @@ jobs:
   
   lint-dockerfile:
     runs-on: ubuntu-latest
+    permissions:
+      checks:write
     steps: 
     - name: Checkout
       uses: actions/checkout@master
