--- a/MiniTwitLogging/extensions/filebeat/filebeat-compose.yml
+++ b/MiniTwitLogging/extensions/filebeat/filebeat-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   filebeat:
@@ -30,4 +30,4 @@ services:
       FILEBEAT_INTERNAL_PASSWORD: ${FILEBEAT_INTERNAL_PASSWORD:-}
       BEATS_SYSTEM_PASSWORD: ${BEATS_SYSTEM_PASSWORD:-}
     networks:
-      - elk
+      - itu-minitwit-network
