--- a/MiniTwitLogging/extensions/fleet/fleet-compose.yml
+++ b/MiniTwitLogging/extensions/fleet/fleet-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   fleet-server:
@@ -20,12 +20,12 @@ services:
         target: /var/run/docker.sock
         read_only: true
     environment:
-      FLEET_SERVER_ENABLE: '1'
-      FLEET_SERVER_INSECURE_HTTP: '1'
+      FLEET_SERVER_ENABLE: "1"
+      FLEET_SERVER_INSECURE_HTTP: "1"
       FLEET_SERVER_HOST: 0.0.0.0
       FLEET_SERVER_POLICY_ID: fleet-server-policy
       # Fleet plugin in Kibana
-      KIBANA_FLEET_SETUP: '1'
+      KIBANA_FLEET_SETUP: "1"
       # Enrollment.
       # (a) Auto-enroll using basic authentication
       ELASTICSEARCH_USERNAME: elastic
@@ -38,7 +38,7 @@ services:
     # Elastic Agent does not retry failed connections to Kibana upon the initial enrollment phase.
     restart: on-failure
     networks:
-      - elk
+      - itu-minitwit-network
     depends_on:
       - elasticsearch
       - kibana
