--- a/MiniTwitLogging/extensions/metricbeat/metricbeat-compose.yml
+++ b/MiniTwitLogging/extensions/metricbeat/metricbeat-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   metricbeat:
@@ -42,6 +42,6 @@ services:
       MONITORING_INTERNAL_PASSWORD: ${MONITORING_INTERNAL_PASSWORD:-}
       BEATS_SYSTEM_PASSWORD: ${BEATS_SYSTEM_PASSWORD:-}
     networks:
-      - elk
+      - itu-minitwit-network
     depends_on:
       - elasticsearch
