--- a/compose.yml
+++ b/compose.yml
@@ -2,9 +2,6 @@ networks:
   itu-minitwit-network:
     external: false
     name: itu-minitwit-network
-
-  elk:
-    driver: bridge
   main:
 
 services:
@@ -145,6 +142,7 @@ services:
     ports:
       - 5601:5601
     environment:
+      #- ELASTICSEARCH_URL=http://localhost:9200
       KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
     networks:
       - itu-minitwit-network
