Try with playwriths dotnet docker image

--- a/MiniTwitUITests/Dockerfile
+++ b/MiniTwitUITests/Dockerfile
@@ -1,6 +1,6 @@
 # Learn about building .NET container images:
 # https://github.com/dotnet/dotnet-docker/blob/main/samples/README.md
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/playwright/dotnet:v1.42.0-jammy AS build
 WORKDIR /source
 
 # COPY TESTS
