change dev compose file to postgres

--- a/MiniTwit/appsettings.Development.json
+++ b/MiniTwit/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "ConnectionStrings": {
     "MiniTwitContext": "Data Source=MiniTwit.Data.db",
-    "MinitwitSqlServer": "Server=minitwit-database,1433;User Id=sa;Password=Pass@word;TrustServerCertificate=true;"
+    "MinitwitPostgresServer": "Host=minitwit-database; Port=5432; Database=postgres; User Id=example; Password=example;"
   }
 }
