logging with fluentd to file works

--- a/configuration_files/fluent.conf
+++ b/configuration_files/fluent.conf
@@ -3,74 +3,11 @@
   port 24224
 </source>
 
-<match minitwit_database.*>
+<match minitwit_database>
     @type file
-    path /fluentd/log/minitwit_database.log
-    compress gzip
+    path /fluentd/log/minitwit_database/
     <buffer>
-        timekey 1d
-        timekey_use_utc true
-        timekey_wait 10m
-    </buffer>
-    <format>
-        @type json
-    </format>
-</match>
-
-
-
-<match minitwit_service.*>
-    @type file
-    path /fluentd/log/minitwit_service.log
-    compress gzip
-    <buffer>
-        timekey 1d
-        timekey_use_utc true
-        timekey_wait 10m
-    </buffer>
-    <format>
-        @type json
-    </format>
-</match>
-
-
-<match prometheus.*>
-    @type file
-    path /fluentd/log/prometheus.log
-    compress gzip
-    <buffer>
-        timekey 1d
-        timekey_use_utc true
-        timekey_wait 10m
-    </buffer>
-    <format>
-        @type json
-    </format>
-</match>
-
-
-<match grafana.*>
-    @type file
-    path /fluentd/log/grafana.log
-    compress gzip
-    <buffer>
-        timekey 1d
-        timekey_use_utc true
-        timekey_wait 10m
-    </buffer>
-    <format>
-        @type json
-    </format>
-</match>
-
-
-# Filter block to specify the destination for logs from your .NET application
-<match minitwit_dotnet.*>
-    @type file
-    path /fluentd/log/minitwit_dotnet.log
-    compress gzip
-    <buffer>
-        timekey 1d
+        timekey 60m
         timekey_use_utc true
         timekey_wait 1m
     </buffer>
@@ -78,3 +15,47 @@
         @type json
     </format>
 </match>
+
+
+
+<match minitwit_service>
+    @type file
+    path /fluentd/log/minitwit_service/
+    <buffer>
+        timekey 10m
+        timekey_use_utc true
+        timekey_wait 1m
+    </buffer>
+    <format>
+        @type json
+    </format>
+</match>
+
+
+<match prometheus>
+    @type file
+    path /fluentd/log/prometheus/
+    <buffer>
+        timekey 60m
+        timekey_use_utc true
+        timekey_wait 1m
+    </buffer>
+    <format>
+        @type json
+    </format>
+</match>
+
+
+<match grafana>
+    @type file
+    path /fluentd/log/grafana/
+    <buffer>
+        timekey 60m
+        timekey_use_utc true
+        timekey_wait 1m
+    </buffer>
+    <format>
+        @type json
+    </format>
+</match>
+
