bug fix in fluent.conf, buffer now writing to actual log file

--- a/configuration_files/fluent.conf
+++ b/configuration_files/fluent.conf
@@ -5,7 +5,7 @@
 
 <match minitwit_database>
     @type file
-    path /fluentd/log/minitwit_database/
+    path /fluentd/log/minitwit_database/minitwit_database.log
     <buffer>
         timekey 1m
         timekey_use_utc true
@@ -20,7 +20,7 @@
 
 <match minitwit_service>
     @type file
-    path /fluentd/log/minitwit_service/
+    path /fluentd/log/minitwit_service/minitwit_service.log
     <buffer>
         timekey 1m
         timekey_use_utc true
@@ -34,7 +34,7 @@
 
 <match prometheus>
     @type file
-    path /fluentd/log/prometheus/
+    path /fluentd/log/prometheus/prometheus.log
     <buffer>
         timekey 1m
         timekey_use_utc true
@@ -48,7 +48,7 @@
 
 <match grafana>
     @type file
-    path /fluentd/log/grafana/
+    path /fluentd/log/grafana/grafana.log
     <buffer>
         timekey 1m
         timekey_use_utc true
