--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,7 @@ services:
   minitwit-database:
     container_name: minitwit-database
     image: postgres
-    restart: always
+    restart: unless-stopped
     environment:
       - POSTGRES_PASSWORD=example
       - POSTGRES_USER=example
