--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,8 +10,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the application, test it, and create a Docker image
       run: docker-compose -f compose-test.yml up --force-recreate --abort-on-container-exit --exit-code-from minitwit-uitests
+
   
-  super-linter:
+  linting:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -23,6 +24,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          
+      - name: Run .NET Code Analysis
+        uses: dotnet/code-analysis@v1
+        id: code-analysis
+        with:
+          build-breaking: true
+          all-categories: all
 
       - name: Super-linter
         uses: super-linter/super-linter@v6.3.1
