--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Build the application, test it, and create a Docker image
       run: docker-compose -f compose-test.yml up --force-recreate --abort-on-container-exit --exit-code-from minitwit-uitests
   
-  super-linter:
+  linting:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -23,6 +23,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Run .NET Code Analysis
+        uses: dotnet/code-analysis@d3a5cb6ef8547e36e87c4378cc3e982d9fe1afe7
+        id: code-analysis
+        with:
+          build-breaking: true
 
       - name: Super-linter
         uses: super-linter/super-linter@v6.3.1
