--- a/configuration_files/fluent.conf
+++ b/configuration_files/fluent.conf
@@ -6,6 +6,7 @@
 <match minitwit_database>
     @type file
     path /fluentd/log/minitwit_database/minitwit_database.log
+    append true
     <buffer>
         timekey 10m
         timekey_use_utc true
@@ -21,7 +22,8 @@
 <match minitwit_service>
     @type file
     path /fluentd/log/minitwit_service/minitwit_service.log
-    <buffer>
+    append true
+    <buffer time>
         timekey 10m
         timekey_use_utc true
         timekey_wait 1m
@@ -35,6 +37,7 @@
 <match prometheus>
     @type file
     path /fluentd/log/prometheus/prometheus.log
+    append true
     <buffer>
         timekey 60m
         timekey_use_utc true
@@ -49,6 +52,7 @@
 <match grafana>
     @type file
     path /fluentd/log/grafana/grafana.log
+    append true
     <buffer>
         timekey 60m
         timekey_use_utc true
