--- a/configuration_files/fluent.conf
+++ b/configuration_files/fluent.conf
@@ -8,7 +8,7 @@
     path /fluentd/log/minitwit_database/minitwit_database.log
     append true
     <buffer>
-        timekey 10m
+        timekey 1d
         timekey_use_utc true
         timekey_wait 1m
     </buffer>
@@ -24,7 +24,7 @@
     path /fluentd/log/minitwit_service/minitwit_service.log
     append true
     <buffer time>
-        timekey 10m
+        timekey 1d
         timekey_use_utc true
         timekey_wait 1m
     </buffer>
@@ -39,7 +39,7 @@
     path /fluentd/log/prometheus/prometheus.log
     append true
     <buffer>
-        timekey 60m
+        timekey 1d
         timekey_use_utc true
         timekey_wait 1m
     </buffer>
@@ -54,7 +54,7 @@
     path /fluentd/log/grafana/grafana.log
     append true
     <buffer>
-        timekey 60m
+        timekey 1d
         timekey_use_utc true
         timekey_wait 1m
     </buffer>
