--- a/configuration_files/fluent.conf
+++ b/configuration_files/fluent.conf
@@ -5,7 +5,7 @@
 
 <match minitwit_database>
     @type file
-    path /fluentd/log/minitwit_database/
+    path /fluentd/log/minitwit_database
     append true
     <buffer>
         timekey 1d
@@ -21,7 +21,7 @@
 
 <match minitwit_service>
     @type file
-    path /fluentd/log/minitwit_service/
+    path /fluentd/log/minitwit_service
     append true
     <buffer time>
         timekey 1d
@@ -36,7 +36,7 @@
 
 <match prometheus>
     @type file
-    path /fluentd/log/prometheus/
+    path /fluentd/log/prometheus
     append true
     <buffer>
         timekey 1d
@@ -51,7 +51,7 @@
 
 <match grafana>
     @type file
-    path /fluentd/log/grafana/
+    path /fluentd/log/grafana
     append true
     <buffer>
         timekey 1d
