--- a/MiniTwitUITests/MiniTwitUITests.csproj
+++ b/MiniTwitUITests/MiniTwitUITests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Playwright" Version="1.42.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
