add env vars and also change the db host from localhost to the correct host

--- a/compose-test.yml
+++ b/compose-test.yml
@@ -37,3 +37,10 @@ services:
     build: MiniTwitUITests
     networks:
       - itu-minitwit-network
+    environment:
+      - MINITWIT_SERVICE_URL=http://minitwit-service:8080
+      - MINITWIT_DB_HOST=minitwit-database
+      - MINITWIT_DB_PORT=5432
+      - MINITWIT_DB_USERNAME=example
+      - MINITWIT_DB_PASSWORD=example
+      - MINITWIT_DB_NAME=postgres
