--- a/compose.yml
+++ b/compose.yml
@@ -112,10 +112,11 @@ services:
       - minitwit-service
     networks:
       - itu-minitwit-network
-    command:
-      [
+    command: [
         "./node_modules/.bin/cypress",
         "run",
         "--spec",
         "/e2e/cypress/e2e/register.cy.js",
+        #"--spec",
+        #"/e2e/cypress/e2e/login.cy.js",
       ]
