--- a/compose.yml
+++ b/compose.yml
@@ -100,15 +100,15 @@ services:
     networks:
       - itu-minitwit-network
 
-  cypress:
-    image: cypress/included:12.3.0
-    container_name: minitwit-cypress
-    volumes:
-      - ./MiniTwit:/e2e
-    working_dir: /e2e
-    environment:
-      - ELECTRON_DISABLE_GPU=true
-    depends_on:
-      - minitwit-service
-    networks:
-      - itu-minitwit-network
+  #cypress:
+  #  image: cypress/included:12.3.0
+  #  container_name: minitwit-cypress
+  #  volumes:
+  #    - ./MiniTwit:/e2e
+  #  working_dir: /e2e
+  #  environment:
+  #    - ELECTRON_DISABLE_GPU=true
+  #  depends_on:
+  #    - minitwit-service
+  #  networks:
+  #    - itu-minitwit-network
