--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -47,6 +47,7 @@ jobs:
         with:
           add: './report/build/*.pdf'
           commit: --signoff
+          push: --force
           default_author: github_actor
           committer_name: Minitwit Github Action
           fetch: false
