ignore report on normal changes

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,10 @@
 name: Pull Request Workflow
 
 on:
-  pull_request
+  pull_request:
+    paths-ignore:
+      - 'report/**'
+
 
 jobs:
   build-test:
