--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,6 +4,8 @@ name: Publish Image Workflow
 on:
   push:
     branches: ['main']
+    paths-ignore:
+      - 'report/**'
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
