Include everything in report sub-dirs

--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -5,8 +5,8 @@ on:
     branches: ['main']
     paths:
       - 'report/main.tex'
-      - 'report/sections'
-      - 'report/images'
+      - 'report/sections/**'
+      - 'report/images/**'
 
 
 jobs:
