added composee2etest.yml to ci/cd

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,18 +8,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the application, test it, and create a Docker image
-        run: docker-compose -f compose-test.yml up --force-recreate --abort-on-container-exit --exit-code-from minitwit-uitests
+        run: |-
+          docker-compose -f compose-test.yml up --force-recreate --abort-on-container-exit --exit-code-from minitwit-uitests
+          docker-compose -f compose-e2etest.yml up --force-recreate --abort-on-container-exit --exit-code-from minitwit-e2etests
 
-  cypress-run:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  #cypress-run:
+  #  runs-on: ubuntu-22.04
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v4
 
-      # Run Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        working-directory: CypressGHA
+  # Run Cypress tests
+  #    - name: Cypress run
+  #      uses: cypress-io/github-action@v6
+  #      working-directory: CypressGHA
 
   super-linter:
     runs-on: ubuntu-latest
