--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,9 +16,11 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the application, test it, and create a Docker image
-      run: docker-compose -f compose-test.yml up --force-recreate --abort-on-container-exit --exit-code-from minitwit-uitests
+      - uses: actions/checkout@v3
+      - name: Build the application, test it, and create a Docker image
+        run: |-
+          docker-compose -f compose-test.yml up --force-recreate --abort-on-container-exit --exit-code-from minitwit-uitests
+          docker-compose -f compose-e2etest.yml up --force-recreate --abort-on-container-exit --exit-code-from minitwit-e2etests
 
   build-and-push-image:
     runs-on: ubuntu-latest
