--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -50,6 +50,6 @@ jobs:
           commit: --signoff
           default_author: github_actor
           committer_name: Minitwit Github Action
-          fetch: false
+          fetch: true
           pathspec_error_handling: ignore
 
